# frc-2024-field-server

./: LICENSE  Makefile  README.md  pyproject.toml
arduino-sketches/: Makefile  amp.ino
arduino-sketches/src/: amp.ino  common-net.ino  debouncing-momentary.ino  speaker.ino
frc_2024_field_server/: app.py  client.py  clients.py  message_receiver.py  ui.py
frc_2024_field_server/game/: actions.py  clients.py  constants.py  loop.py  messages.py  modes.py  state.py
